# hello-world

./: .gitignore  README.md  function_template.h  main.cpp  main.py  stdafx.h  tcp_process.cpp  tcp_process.h  template_process.cpp  template_process.h  test.cpp  test.h  test_process.cpp  test_process.h
boost_python/: .gitignore  CMakeLists.txt  main.cpp  python_interface.py  test.cpp  test.h  test_py.cc  test_so.py
recommend/: simple_recommend.py
similarity/: sim_pearson.py
